--- a/index.html
+++ b/index.html
@@ -311,6 +311,9 @@
                 <h2>We’re a new fund, but we&rsquo;re not new to investing.</h2>
                 <ul>
                     <li>
+                        <div class="person">
+                            <img src="img/mark.jpg" alt="Mark Gorenberg">
+                        </div>
                         <h3><b>Mark Gorenberg</b> – Managing Director</h3>
                         <p>Mark has an enviable track record when it comes to identifying and nurturing enterprise software that delivers exceptional returns. During his 20 years in venture capital, he&rsquo;s generated extraordinary results, particularly in analytics where his portfolio has realized a 149 percent annual rate of return.</p>
                         <p>Prior to Zetta Venture Partners, Mark served as managing director at Hummer Winblad, the first fund focused on enterprise software. There, his most publicized successes in analytics included Omniture (IPO and acquired by Adobe); AdForce (IPO and acquired by CMGI) and Scopus Technologies (IPO and acquired by Seibel Systems). Today, he sits on the boards of the next generation of leading companies like Domo, Inside Sales, EventBoard and FollowAnalytics.</p>
@@ -320,6 +323,9 @@
                         <a href="mailto:mark@zettavp.com">mark@zettavp.com</a>
                     </li>
                     <li>
+                        <div class="person">
+                            <img src="img/ash.jpg" alt="Ash Fontana">
+                        </div>
                         <h3><b>Ash Fontana</b> – Managing Director</h3>
                         <p>Ash led fundraising products at AngelList – the most successful startup investing platform in the world &ndash; managing $130M over more than 250 funds. There, he launched online investing, created the first startup &lsquo;index fund&rsquo; and curated investment opportunities across 500,000 companies. He also ran special projects like AngelList’s expansion into Europe and the UK. Simultaneously, Ash led syndicates that invested in Mixmax (email analytics), Gridspace (voice analytics) and Sliced Investing (hedge fund analytics).</p>
                         <p>An entrepreneur at heart, Ash previously co-founded Topguest, a Founders Fund-backed customer analytics company that built marketing technology for companies like IHG, United and Caesars Entertainment. Ash executed the sale of Topguest in an 8 figure transaction 18 months after the company was founded.</p>
@@ -327,6 +333,9 @@
                         <a href="mailto:ash@zettavp.com">ash@zettavp.com</a>
                     </li>
                     <li>
+                        <div class="person">
+                            <img src="img/kanu.jpg" alt="Kanu Gulati">
+                        </div>
                         <h3><b>Kanu Gulati</b> – Senior Associate</h3>
                         <p>Kanu has over 10 years of operating experience as an engineer, scientist and strategist. She owned Intel&rsquo;s multi-core CAD algorithms research roadmap, developed advanced parallel CAD solutions, and pioneered metrics-driven methodology improvements for design flows. After her work as a researcher, she led due diligence and provided deal support for early stage investments at Intel Capital and Khosla Ventures.</p>
                         <p>Kanu also worked in business development at MapD (hardware-accelerated data visualization), Nascentric (fast circuit simulation tool, acquired by Cadence) and Atrenta (predictive analytics for design verification and optimization, acquired by Synopsys), among others.</p>
