updated company bios

--- a/index.html
+++ b/index.html
@@ -243,6 +243,7 @@
                             <dt>Round:</dt>
                             <dd>A</dd>
                         </dl>
+                        <p>Content Analytics provides insight into on-site search, content, assortment, naming and purchase associations to increase sales.</p>
                     </div>
                     <div class="company" id="optimine">
                         <h3>
@@ -258,6 +259,7 @@
                             <dt>Round:</dt>
                             <dd>A</dd>
                         </dl>
+                        <p>Optimine's marketing mix optimization platform helps marketers understand their ROI across online and offline channels.</p>
                         <a href="http://optimine.com/careers/">Jobs at Optimine</a>
                     </div>
                 </div>
@@ -276,6 +278,7 @@
                             <dt>Round:</dt>
                             <dd>A</dd>
                         </dl>
+                        <p>Pixlee enables companies to collect, manage and display user-generated photos across multiple social media platforms. </p>
                         <a href="http://www.pixlee.com/careers">Jobs at Pixlee</a>
                     </div>
                     <div class="company" id="stealth">
@@ -292,6 +295,7 @@
                             <dt>Round:</dt>
                             <dd>A</dd>
                         </dl>
+                        <p>Founded by the former founder of one of the most important software companies of the last 20 years. Zetta co-invested with Sequoia and A16Z.</p>
                     </div>
                 </div>
                 <div class="company-pair">
@@ -311,6 +315,7 @@
                             <dt>Board seat:</dt>
                             <dd>Mark Gorenberg</dd>
                         </dl>
+                        <p>Domino empowers data scientists and analysts with technology that accelerates their work and facilitates best practices.</p>
                         <a href="https://www.dominodatalab.com/careers">Jobs at Domino</a>
                     </div>
                 </div>
