--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                             <dt>Board seat:</dt>
                             <dd>Mark Gorenberg</dd>
                         </dl>
-                        <p>Domo serves executives across every role and across a broad range of industries with dashboards of business data.</p>
+                        <p>Domo provides a cloud-based business management platform that gives CEOs, managers and decision makers the access to all the real-time information they need in one place to make faster, more effective decisions.</p>
                         <a href="https://www.domo.com/company/careers">Jobs at Domo</a>
                     </div>
                     <div class="company" id="insidesales">
@@ -105,7 +105,7 @@
                             <dt>Board seat:</dt>
                             <dd>Mark Gorenberg</dd>
                         </dl>
-                        <p>InsideSales.com offers a sales acceleration platform that generates revenue growth up to 30% in as little as 90 days.</p>
+                        <p>InsideSales.com drives revenue growth of and average of 15-30% using the industry's leading sales acceleration platform built on a predictive and prescriptive self-learning engine.</p>
                         <a href="http://www.insidesales.com/careers">Jobs at Insidesales</a>
                     </div>
                 </div>
@@ -126,7 +126,7 @@
                             <dt>Board seat:</dt>
                             <dd>Mark Gorenberg</dd>
                         </dl>
-                        <p>Lucid aggregates energy and water data from 150+ metering and building systems into one unified operating system.</p>
+                        <p>Lucid connects to over 175 different utility metering systems in buildings and aggregates the resulting data to empower organizations to make smarter decisions that reduce costs, improve occupant comfort, and accelerate team productivity.</p>
                         <a href="https://www.lucidconnects.com/company/careers">Jobs at Lucid</a>
                     </div>
                     <div class="company" id="kaggle">
@@ -183,7 +183,7 @@
                             <dt>Board seat:</dt>
                             <dd>Mark Gorenberg</dd>
                         </dl>
-                        <p>Followanalytics provides brands with solutions to launch, measure, optimize and maintain their presence in the mobile world.</p>
+                        <p>FollowAnalytics provides brands with the industry’s first 1:1 enterprise mobile marketing solution to launch, measure, optimize user experience.</p>
                         <a href="http://followanalytics.com/jobs/">Jobs at Follow Analytics</a>
                     </div>
                 </div>
@@ -204,7 +204,7 @@
                             <dt>Board seat:</dt>
                             <dd>Mark Gorenberg</dd>
                         </dl>
-                        <p>EventBoard optimizes collaboration in the enterprise by providing employee meeting tools and activity-driven insights. </p>
+                        <p>EventBoard provides a cloud-based analytics platform for meeting management that helps companies maximize their workspace and enable their employees to more efficiently work.</p>
                         <a href="https://eventboard.workable.com/">Jobs at Eventboard</a>
                     </div>
                     <div class="company" id="tractable">
@@ -242,7 +242,7 @@
                             <dt>Round:</dt>
                             <dd>A</dd>
                         </dl>
-                        <p>Content Analytics provides insight into on-site search, content, assortment, naming and purchase associations to increase sales.</p>
+                        <p>Content Analytics provides on-site search rankings, content quality, product assortment, product naming, and product purchase associations to improve discoverability and increase sales.</p>
                     </div>
                     <div class="company" id="optimine">
                         <h3>
@@ -252,7 +252,7 @@
                         </h3>
                         <dl>
                             <dt>Raised:</dt>
-                            <dd>$5M</dd>
+                            <dd>$16M</dd>
                             <dt>Location:</dt>
                             <dd>MN</dd>
                             <dt>Round:</dt>
@@ -294,7 +294,7 @@
                             <dt>Location:</dt>
                             <dd>CA</dd>
                             <dt>Round:</dt>
-                            <dd>A</dd>
+                            <dd>Seed</dd>
                         </dl>
                         <p>Pixlee enables companies to collect, manage and display user-generated photos across multiple social media platforms. </p>
                         <a href="http://www.pixlee.com/careers">Jobs at Pixlee</a>
@@ -314,7 +314,7 @@
                         <p>Mark has an enviable track record when it comes to identifying and nurturing enterprise software that delivers exceptional returns. During his 20 years in venture capital, he&rsquo;s generated extraordinary results, particularly in analytics where his portfolio has realized a 149 percent annual rate of return.</p>
                         <p>Prior to Zetta Venture Partners, Mark served as managing director at Hummer Winblad, the first fund focused on enterprise software. There, his most publicized successes in analytics included Omniture (IPO and acquired by Adobe); AdForce (IPO and acquired by CMGI) and Scopus Technologies (IPO and acquired by Seibel Systems). Today, he sits on the boards of the next generation of leading companies like Domo, Inside Sales, EventBoard and FollowAnalytics.</p>
                         <p>Mark started his technology career at Sun Microsystems working on its SPARCstation workstations.</p>
-                        <p>Beyond his role as venture capitalist and entrepreneur, Mark is a trusted advisor to some of the country’s most influential technology institutions. He serves on the President&rsquo;s Council of Advisors on Science and Technology (PCAST), the Board of Trustees for Massachusetts Institute of Technology, the National Venture Capital Association and the FCC’s Technological Advisory Council.</p>
+                        <p>Beyond his role as venture capitalist and entrepreneur, Mark is a trusted advisor to some of the country’s most influential technology institutions. He serves on the President&rsquo;s Council of Advisors on Science and Technology (PCAST), the Board of Trustees for Massachusetts Institute of Technology and the National Venture Capital Association.</p>
                         <p>He graduated from MIT and received masters degrees from the University of Minnesota and Stanford University in Electrical Engineering.</p>
                         <a href="mailto:mark@zettavp.com">mark@zettavp.com</a>
                     </li>
