--- a/index.html
+++ b/index.html
@@ -316,7 +316,6 @@
                         <p>Mark started his technology career at Sun Microsystems working on its SPARCstation workstations.</p>
                         <p>Beyond his role as venture capitalist and entrepreneur, Mark is a trusted advisor to some of the country’s most influential technology institutions. He serves on the President&rsquo;s Council of Advisors on Science and Technology (PCAST), the Board of Trustees for Massachusetts Institute of Technology and the National Venture Capital Association.</p>
                         <p>He graduated from MIT and received masters degrees from the University of Minnesota and Stanford University in Electrical Engineering.</p>
-                        <a href="mailto:mark@zettavp.com">mark@zettavp.com</a>
                     </li>
                     <li>
                         <div class="person">
@@ -326,7 +325,6 @@
                         <p>Ash led fundraising products at AngelList – the most successful startup investing platform in the world &ndash; managing $130M over more than 250 funds. There, he launched online investing, created the first startup &lsquo;index fund&rsquo; and curated investment opportunities across 500,000 companies. He also ran special projects like AngelList’s expansion into Europe and the UK. Simultaneously, Ash led syndicates that invested in Mixmax (email analytics), Gridspace (voice analytics) and Sliced Investing (hedge fund analytics).</p>
                         <p>An entrepreneur at heart, Ash previously co-founded Topguest, a Founders Fund-backed customer analytics company that built marketing technology for companies like IHG, United and Caesars Entertainment. Ash executed the sale of Topguest in an 8 figure transaction 18 months after the company was founded.</p>
                         <p>He started his professional career at Macquarie Capital, where he was a top-ranked analyst in private equity, investment banking and equity research. Academically, he graduated with First Class honors in law and finance on five scholarships from the University of Sydney.</p>
-                        <a href="mailto:ash@zettavp.com">ash@zettavp.com</a>
                     </li>
                     <li>
                         <div class="person">
@@ -336,7 +334,6 @@
                         <p>Kanu has over 10 years of operating experience as an engineer, scientist and strategist. She owned Intel&rsquo;s multi-core CAD algorithms research roadmap, developed advanced parallel CAD solutions, and pioneered metrics-driven methodology improvements for design flows. After her work as a researcher, she led due diligence and provided deal support for early stage investments at Intel Capital and Khosla Ventures.</p>
                         <p>Kanu also worked in business development at MapD (hardware-accelerated data visualization), Nascentric (fast circuit simulation tool, acquired by Cadence) and Atrenta (predictive analytics for design verification and optimization, acquired by Synopsys), among others.</p>
                         <p>Kanu co-authored 3 books, 1 book chapter, 35+ peer-reviewed publications with 370+ citations, and 1 US Patent on high performance computing and hardware acceleration. She completed her MBA at Harvard Business School, where she was co-president of the Annual Venture Capital and Private Equity Conference. She obtained her Ph.D. and masters degrees from Texas A&amp;M University, and her undergraduate degree from Delhi College of Engineering.</p>
-                        <a href="mailto:kanu@zettavp.com">kanu@zettavp.com</a>
                     </li>
                 </ul>
             </div>
@@ -346,8 +343,8 @@
                 <span class="logo">Zetta</span>
                 <p class="contact-details">
                     contact@zettavp.com  <br/>
-                    Market Street, Suite 650 <br/>
-                    SF, CA 94103
+                    717 Market Street, Suite 650 <br/>
+                    San Francisco, CA 94103
                 </p>
                 <p id="copyright">Zetta Venture Partners &ndash; Copyright 2015</p>
             </div>
