--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <h2>Here comes the Zetta generation.</h2>
                     <div id="intro-content">
                         <div class="col-4">
-                            <p>Analytics is the fourth era of computing. The first era was the production of semiconductors that enabled us to quickly process data. The second era was the development of software to process our real-world workflows on these semiconductors. The third era was the distribution of computing to significantly reduce costs and allow the development of new types of software. </p>
+                            <p>Analytics is the fourth era of computing. The first era was the production of semiconductors that enabled us to quickly compute. The second era was the development of software to process our real-world workflows on these semiconductors. The third era was the distribution of computing to significantly reduce costs and allow the development of new types of software. </p>
                             <p>The fourth era is the computation of huge volumes of data on distributed systems and the development of software that can learn from this data. Just as all workflows became software, all software will become analytical.</p>
                         </div>
                         <div class="col-4">
