changed contact email to info@

--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
             <div class="container">
                 <span class="logo">Zetta</span>
                 <p class="contact-details">
-                    contact@zettavp.com  <br/>
+                    info@zettavp.com  <br/>
                     717 Market Street, Suite 650 <br/>
                     San Francisco, CA 94103
                 </p>
