--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <div id="hero-content">
                     <span class="logo">Zetta</span>
                     <h1>Zetta invests in intelligent enterprise software.</h1>
-                    <p>We invest in companies building software that learns from data to analyze, predict and prescribe outcomes. We lead or co-lead $1-5M funding rounds. Each Zetta partner works with less than ten startups.</p>
+                    <p>We invest in companies building software that learns from data to analyze, predict and prescribe outcomes. We lead or co-lead $1-5M funding rounds. Each Zetta partner works with 5-10 startups.</p>
                 </div>
             </div>
         </section>
