added blog posts

--- a/index.html
+++ b/index.html
@@ -48,6 +48,21 @@
                         </div>
                     </div>
                     <div id="press">
+                        <h3>Recent writing</h3>
+                        <div class="col-4">
+                            <ul>
+                                <li><a href="https://medium.com/@Zetta/vertical-beats-horizontal-in-supervised-machine-learning-e9d17ff2d443#.v3d3ilc7p" target="_blank">Vertical Beats Horizontal in Machine Learning</a></li>
+                                <li><a href="https://medium.com/@Zetta/the-intelligence-era-and-the-virtuous-loop-784e9928f51b#.hh5zt2wr0" target="_blank">The Intelligence Era and the Virtuous Loop</a></li>
+                            </ul>
+                        </div>
+                        <div class="col-4">
+                            <ul>
+                                <li><a href="https://medium.com/@Zetta/hardware-acceleration-in-data-analytics-e247b790aaba" target="_blank">Introduction to Hardware Acceleration in Data Analytics</a></li>
+                                <li><a href="https://medium.com/@Zetta/new-opportunities-for-hardware-acceleration-in-data-analytics-a5f8722e7571#.u1v4r0xx7" target="_blank">New Opportunities for Hardware Acceleration in Data Analytics</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div id="press">
                         <h3>In the press</h3>
                         <div class="col-4">
                             <ul>
