--- a/index.html
+++ b/index.html
@@ -296,22 +296,21 @@
                         <p>Domino empowers data scientists with technology that facilitates collaboration and the development of reproducible research systems.</p>
                         <a href="https://www.dominodatalab.com/careers">Jobs at Domino</a>
                     </div>
-                    <div class="company" id="pixlee">
+                    <div class="company" id="AppDiff">
                         <h3>
-                            <a href="https://www.pixlee.com/" target="_blank">
-                                <img src="img/company11.png" alt="Pixlee">
+                            <a href="https://www.appdiff.com/" target="_blank">
+                                <img src="img/company14.png" alt="AppDiff">
                             </a>
                         </h3>
                         <dl>
                             <dt>Raised:</dt>
-                            <dd>$2M</dd>
+                            <dd>$2.5M</dd>
                             <dt>Location:</dt>
                             <dd>CA</dd>
                             <dt>Round:</dt>
                             <dd>Seed</dd>
                         </dl>
-                        <p>Pixlee enables companies to collect, manage and display user-generated photos across multiple social media platforms. </p>
-                        <a href="http://www.pixlee.com/careers">Jobs at Pixlee</a>
+                        <p>Appdiff makes testing mobile apps simple, reliable, and comprehensive.</p>
                     </div>
                 </div>
             </div>
