fixed logo image

--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
                         <p>Domino empowers data scientists with technology that facilitates collaboration and the development of reproducible research systems.</p>
                         <a href="https://www.dominodatalab.com/careers">Jobs at Domino</a>
                     </div>
-                    <div class="company" id="AppDiff">
+                    <div class="company" id="appdiff">
                         <h3>
                             <a href="https://www.appdiff.com/" target="_blank">
                                 <img src="img/company14.png" alt="AppDiff">
