updated blog posts

--- a/index.html
+++ b/index.html
@@ -51,14 +51,16 @@
                         <h3>Recent writing</h3>
                         <div class="col-4">
                             <ul>
+                                <li><a href="https://medium.com/@Zetta/dont-sell-your-data-9f0c21b445b8#.jqcppqkut" target="_blank">Don't Sell Your Data</a></li>
                                 <li><a href="https://medium.com/@Zetta/beyond-systems-of-record-7b9777695f38#.wklrzu7iq" target="_blank">Beyond Systems of Record</a></li>
-                                <li><a href="https://medium.com/@Zetta/vertical-beats-horizontal-in-supervised-machine-learning-e9d17ff2d443#.v3d3ilc7p" target="_blank">Vertical Beats Horizontal in Machine Learning</a></li>
+                                <li><a href="https://medium.com/@Zetta/the-intelligence-era-and-the-virtuous-loop-784e9928f51b#.hh5zt2wr0" target="_blank">The Intelligence Era and the Virtuous Loop</a></li>
                             </ul>
                         </div>
                         <div class="col-4">
                             <ul>
-                                <li><a href="https://medium.com/@Zetta/the-intelligence-era-and-the-virtuous-loop-784e9928f51b#.hh5zt2wr0" target="_blank">The Intelligence Era and the Virtuous Loop</a></li>
                                 <li><a href="https://medium.com/@Zetta/positioning-a-machine-learning-company-f63f8c73dfc2#.7eglpq72f" target="_blank">Positioning a Machine Learning Company</a></li>
+                                <li><a href="https://medium.com/@Zetta/vertical-beats-horizontal-in-supervised-machine-learning-e9d17ff2d443#.v3d3ilc7p" target="_blank">Vertical Beats Horizontal in Machine Learning</a></li>
+                                <li><a href="https://medium.com/@Zetta/one-framework-to-visualize-them-all-e188fc27bfc#.b098yagwn" target="_blank">Framework to Grasp Industrial Analytics Opportunities</a></li>
                             </ul>
                         </div>
                     </div>
