added two companies

--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
                     </div>
                 </div>
                 <div class="company-pair">
-                    <div class="company" id="domino" class="last">
+                    <div class="company" id="domino">
                         <h3>
                             <a href="https://www.dominodatalab.com/" target="_blank">
                                 <img src="img/company13.png" alt="Domino Data">
@@ -313,6 +313,44 @@
                             <dd>Seed</dd>
                         </dl>
                         <p>Appdiff makes testing mobile apps simple, reliable, and comprehensive.</p>
+                    </div>
+                </div>
+                <div class="company-pair">
+                    <div class="company" id="focal" class="last">
+                        <h3>
+                            <a href="http://www.focal.systems/" target="_blank">
+                                <img src="img/company15.png" alt="Focal Systems">
+                            </a>
+                        </h3>
+                        <dl>
+                            <dt>Raised:</dt>
+                            <dd>$2.5M</dd>
+                            <dt>Location:</dt>
+                            <dd>CA</dd>
+                            <dt>Round:</dt>
+                            <dd>Seed</dd>
+                            <dt>Board seat:</dt>
+                            <dd>Ash Fontana</dd>
+                        </dl>
+                        <p>Focal Systems develops computer vision technology that automatically builds a comprehensive CPG product database, optimizes operations for retailers, and helps customers find what they want.</p>
+                    </div>
+                    <div class="company" id="lilt">
+                        <h3>
+                            <a href="https://lilt.com/" target="_blank">
+                                <img src="img/company16.png" alt="Lilt">
+                            </a>
+                        </h3>
+                        <dl>
+                            <dt>Raised:</dt>
+                            <dd>$2.4M</dd>
+                            <dt>Location:</dt>
+                            <dd>CA</dd>
+                            <dt>Round:</dt>
+                            <dd>Seed</dd>
+                            <dt>Board seat:</dt>
+                            <dd>Ash Fontana</dd>
+                        </dl>
+                        <p>Lilt develops world-leading machine translation technology that helps businesses optimize language translation speed, quality and cost to reach new customers.</p>
                     </div>
                 </div>
             </div>
