--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <div id="hero-content">
                     <span class="logo">Zetta</span>
                     <h1>Zetta invests in intelligent enterprise software.</h1>
-                    <p>We invest in companies building software that learns from data to analyze, predict and prescribe outcomes. We lead or co-lead $1-5M funding rounds. Each Zetta partner works with 5-10 startups.</p>
+                    <p>We partner with companies building software that learns from data to analyze, predict and prescribe outcomes. We lead or co-lead $1-5M funding rounds. Each Zetta partner works for 5-10 startups.</p>
                 </div>
             </div>
         </section>
@@ -376,7 +376,7 @@
                         </div>
                         <h3><b>Ash Fontana</b> – Managing Director</h3>
                         <p>Ash led fundraising products at AngelList – the most successful startup investing platform in the world &ndash; managing $130M over more than 250 funds. There, he launched online investing, created the first startup &lsquo;index fund&rsquo; and curated investment opportunities across 500,000 companies. He also ran special projects like AngelList’s expansion into Europe and the UK. Simultaneously, Ash led syndicates that invested in Mixmax (email analytics), Gridspace (intelligent voice software) and Sliced Investing (hedge fund analytics).</p>
-                        <p>An entrepreneur at heart, Ash previously co-founded Topguest, a Founders Fund-backed customer analytics company that built marketing technology for companies like IHG, United and Caesars Entertainment. Ash executed the sale of Topguest in an 8 figure transaction 18 months after the company was founded.</p>
+                        <p>An entrepreneur at heart, Ash previously co-founded Topguest, a Founders Fund-backed company that built customer analytics technology for companies like IHG, United and Caesars Entertainment. Topguest sold in an 8 figure transaction 18 months after the company was founded.</p>
                         <p>He started his professional career at Macquarie Capital, where he was a top-ranked analyst in private equity, investment banking and equity research. Academically, he graduated with First Class honors in law and finance on five scholarships from the University of Sydney.</p>
                     </li>
                     <li>
