added josh and jeff

--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
         <section id="people">
             <div class="container">
                 <h2>We’re a new fund, but we&rsquo;re not new to investing.</h2>
-                <ul>
+                <ul id="top">
                     <li>
                         <div class="person">
                             <img src="img/mark.jpg" alt="Mark Gorenberg">
@@ -388,6 +388,30 @@
                         <p>Kanu has over 10 years of operating experience as an engineer, scientist and strategist. She owned Intel&rsquo;s multi-core CAD algorithms research roadmap, developed advanced parallel CAD solutions, and pioneered metrics-driven methodology improvements for design flows. After her work as a researcher, she led due diligence and provided deal support for early stage investments at Intel Capital and Khosla Ventures.</p>
                         <p>Kanu also worked in business development at MapD (hardware-accelerated data visualization), Nascentric (fast circuit simulation tool, acquired by Cadence) and Atrenta (predictive analytics for design verification and optimization, acquired by Synopsys), among others.</p>
                         <p>Kanu co-authored 3 books, 1 book chapter, 35+ peer-reviewed publications with 370+ citations, and 1 US Patent on high performance computing and hardware acceleration. She completed her MBA at Harvard Business School, where she was co-president of the Annual Venture Capital and Private Equity Conference. She obtained her Ph.D. and masters degrees from Texas A&amp;M University, and her undergraduate degree from Delhi College of Engineering.</p>
+                    </li>
+                </ul>
+                <ul>
+                    <li>
+                        <div class="person">
+                            <img src="img/josh.jpg" alt="Josh James">
+                        </div>
+                        <h3><b>Josh James</b> – Venture Partner</h3>
+                        <p>Josh founded Domo in 2010 to help CEOs and other leaders change the way they do business and obtain value from the tens of billions of dollars spent on traditional business intelligence systems. Before founding Domo, Josh was the CEO of Omniture, which he co-founded in 1996 and took public in 2006; and from 2006-2009, he was the youngest CEO of a publicly traded company.</p>
+                        <p>Omniture was the number one returning venture investment out of 1,008 venture capital investments in 2004, as well as the number two performing technology IPO of 2006. Omniture was also the fastest or second fastest-growing public company for three consecutive years. In 2009, Josh facilitated Omniture's $1.8 billion sale to Adobe.</p>
+                        <p>Josh serves as a member of the World Economic Forum's Young Global Leaders, a worldwide community of individuals committed to, and recognized for, their proven leadership and potential in shaping the future.</p>
+                        <p>In 2012, the Utah Tech Council inducted him into its Hall of Fame and Mountain West Capital Network named Josh its Entrepreneur of the Year. In 2011, Fortune Magazine recognized him as one of its "40 Under 40: Ones to Watch" and, in 2009, as one of its "40 Under 40" top business executives. He was named the 2006 Ernst & Young Entrepreneur of the Year and Brigham Young University's Technology Entrepreneur of the Decade.</p>
+                        <p>Josh is the founder of CEO.com, a resource to help founders and CEOs stay up to date with what's happening at the executive level across top industries, as well as stay armed with the latest leadership strategies and best practices. He also founded Silicon Slopes, a non-profit initiative designed to promote the interests of Utah's high-tech industry.</p>
+                        <p>Josh has six daughters.</p>
+                    </li>
+                    <li>
+                        <div class="person">
+                            <img src="img/jeff.jpg" alt="Jeff Kearl">
+                        </div>
+                        <h3><b>Jeff Kearl</b> – Venture Partner</h3>
+                        <p>Jeff is the co-founder, CEO and Chairman of Stance, a lifestyle apparel brand headquartered in San Clemente, California. Stance is best known for designing innovative socks and underwear as well as high profile collaborations with the NBA, MLB, Rihanna, Bubba Watson and Big Sean. Stance is backed by Menlo Ventures, Kleiner Perkins, August Capital, Shasta Ventures, Sherpa Ventures, Unversal Music Group, RocNation, Will and Jada Smith and others.</p>
+                        <p>Prior to Stance, Jeff co-founded Logoworks, an Internet startup backed by Shasta and Benchmark that was successfully acquired by HP in 2007. Following the acquisition, Jeff ran strategy and new ventures at HP.</p>
+                        <p>Previously, Jeff worked as an Associate at vSpring Capital, a Salt Lake City-based venture capital firm with over $500M under management where he invested in both software and Internet companies including Altiris (IPO), Ancestry.com (IPO), Cerberian (acquired by Bluecoat Systems), Control4 (IPO),and MediConnect Global (acquired by Verisk Analytics).</p>
+                        <p>Jeff is an angel investor having invested in over 30 startups including Away, Black Tux, Coupa, Domo, Dynamic Signal, Insidesales, Lithium, MX, Omniture, Uber and ZEFR. Jeff is an investor and serves on the board of directors at Skullcandy (NASDAQ: SKUL), Needle and Julep. Jeff was named the 2012 Director of the Year by the Forum for Corporate Directors and the 2014 Entrepreneur of the Year in Orange County.</p>
                     </li>
                 </ul>
             </div>
