--- a/index.html
+++ b/index.html
@@ -408,10 +408,10 @@
                             <img src="img/jeff.jpg" alt="Jeff Kearl">
                         </div>
                         <h3><b>Jeff Kearl</b> – Venture Partner</h3>
-                        <p>Jeff is the co-founder, CEO and Chairman of Stance, a lifestyle apparel brand headquartered in San Clemente, California. Stance is best known for designing innovative socks and underwear as well as high profile collaborations with the NBA, MLB, Rihanna, Bubba Watson and Big Sean. Stance is backed by Menlo Ventures, Kleiner Perkins, August Capital, Shasta Ventures, Sherpa Ventures, Unversal Music Group, RocNation, Will and Jada Smith and others.</p>
+                        <p>Jeff is the co-founder, CEO and Chairman of Stance, a lifestyle apparel brand headquartered in San Clemente, California. Stance is best known for designing innovative socks and underwear as well as high profile collaborations with the NBA, MLB and Rihanna. Stance is backed by Menlo Ventures, Kleiner Perkins, August Capital, Shasta Ventures, Sherpa Ventures and Unversal Music Group.</p>
                         <p>Prior to Stance, Jeff co-founded Logoworks, an Internet startup backed by Shasta and Benchmark that was successfully acquired by HP in 2007. Following the acquisition, Jeff ran strategy and new ventures at HP.</p>
                         <p>Previously, Jeff worked as an Associate at vSpring Capital, a Salt Lake City-based venture capital firm with over $500M under management where he invested in both software and Internet companies including Altiris (IPO), Ancestry.com (IPO), Cerberian (acquired by Bluecoat Systems), Control4 (IPO),and MediConnect Global (acquired by Verisk Analytics).</p>
-                        <p>Jeff is an angel investor having invested in over 30 startups including Away, Black Tux, Coupa, Domo, Dynamic Signal, Insidesales, Lithium, MX, Omniture, Uber and ZEFR. Jeff is an investor and serves on the board of directors at Skullcandy (NASDAQ: SKUL), Needle and Julep. Jeff was named the 2012 Director of the Year by the Forum for Corporate Directors and the 2014 Entrepreneur of the Year in Orange County.</p>
+                        <p>Jeff is an angel investor having invested in over 30 startups including Coupa, Domo, Insidesales, Lithium, MX, Omniture and Uber. Jeff is an investor and serves on the board of directors at Skullcandy (NASDAQ: SKUL), Needle and Julep.</p>
                     </li>
                 </ul>
             </div>
