--- a/index.html
+++ b/index.html
@@ -96,8 +96,6 @@
                             </a>
                         </h3>
                         <dl>
-                            <dt>Raised:</dt>
-                            <dd>$450M</dd>
                             <dt>Location:</dt>
                             <dd>UT</dd>
                             <dt>Round:</dt>
@@ -115,8 +113,6 @@
                             </a>
                         </h3>
                         <dl>
-                            <dt>Raised:</dt>
-                            <dd>$250M</dd>
                             <dt>Location:</dt>
                             <dd>UT</dd>
                             <dt>Round:</dt>
@@ -136,8 +132,6 @@
                             </a>
                         </h3>
                         <dl>
-                            <dt>Raised:</dt>
-                            <dd>$15M</dd>
                             <dt>Location:</dt>
                             <dd>CA</dd>
                             <dt>Round:</dt>
@@ -153,8 +147,6 @@
                             </a>
                         </h3>
                         <dl>
-                            <dt>Raised:</dt>
-                            <dd>$16M</dd>
                             <dt>Location:</dt>
                             <dd>CA</dd>
                             <dt>Round:</dt>
@@ -174,8 +166,6 @@
                             </a>
                         </h3>
                         <dl>
-                            <dt>Raised:</dt>
-                            <dd>$3M</dd>
                             <dt>Location:</dt>
                             <dd>CA</dd>
                             <dt>Round:</dt>
@@ -191,8 +181,6 @@
                             </a>
                         </h3>
                         <dl>
-                            <dt>Raised:</dt>
-                            <dd>$12M</dd>
                             <dt>Location:</dt>
                             <dd>France</dd>
                             <dt>Round:</dt>
@@ -212,8 +200,6 @@
                             </a>
                         </h3>
                         <dl>
-                            <dt>Raised:</dt>
-                            <dd>$8M</dd>
                             <dt>Location:</dt>
                             <dd>UT</dd>
                             <dt>Round:</dt>
@@ -231,10 +217,8 @@
                             </a>
                         </h3>
                         <dl>
-                            <dt>Raised:</dt>
-                            <dd>$2M</dd>
                             <dt>Location:</dt>
-                            <dd>England</dd>
+                            <dd>London</dd>
                             <dt>Round:</dt>
                             <dd>Seed</dd>
                             <dt>Board seat:</dt>
@@ -252,8 +236,6 @@
                             </a>
                         </h3>
                         <dl>
-                            <dt>Raised:</dt>
-                            <dd>$5M</dd>
                             <dt>Location:</dt>
                             <dd>CA</dd>
                             <dt>Round:</dt>
@@ -268,8 +250,6 @@
                             </a>
                         </h3>
                         <dl>
-                            <dt>Raised:</dt>
-                            <dd>$16M</dd>
                             <dt>Location:</dt>
                             <dd>MN</dd>
                             <dt>Round:</dt>
@@ -287,8 +267,6 @@
                             </a>
                         </h3>
                         <dl>
-                            <dt>Raised:</dt>
-                            <dd>$3M</dd>
                             <dt>Location:</dt>
                             <dd>CA</dd>
                             <dt>Round:</dt>
@@ -306,8 +284,6 @@
                             </a>
                         </h3>
                         <dl>
-                            <dt>Raised:</dt>
-                            <dd>$2.5M</dd>
                             <dt>Location:</dt>
                             <dd>CA</dd>
                             <dt>Round:</dt>
@@ -324,8 +300,6 @@
                             </a>
                         </h3>
                         <dl>
-                            <dt>Raised:</dt>
-                            <dd>$2.5M</dd>
                             <dt>Location:</dt>
                             <dd>CA</dd>
                             <dt>Round:</dt>
@@ -342,8 +316,6 @@
                             </a>
                         </h3>
                         <dl>
-                            <dt>Raised:</dt>
-                            <dd>$2.4M</dd>
                             <dt>Location:</dt>
                             <dd>CA</dd>
                             <dt>Round:</dt>
