changed eventboard to teem

--- a/index.html
+++ b/index.html
@@ -201,8 +201,8 @@
                 <div class="company-pair">
                     <div class="company" id="eventboard">
                         <h3>
-                            <a href="https://eventboard.io/" target="_blank">
-                                <img src="img/company07.png" alt="Eventboard">
+                            <a href="https://teem.com/" target="_blank">
+                                <img src="img/company07.png" alt="Teem">
                             </a>
                         </h3>
                         <dl>
@@ -213,8 +213,8 @@
                             <dt>Board seat:</dt>
                             <dd>Mark Gorenberg</dd>
                         </dl>
-                        <p>EventBoard provides a cloud-based analytics platform for meeting management that helps companies optimize their workspace and employees to more efficiently work.</p>
-                        <a href="https://eventboard.workable.com/">Jobs at Eventboard</a>
+                        <p>Teem provides a cloud-based analytics platform for meeting management that helps companies optimize their workspace and employees to more efficiently work.</p>
+                        <a href="https://teem.workable.com/">Jobs at Teem</a>
                     </div>
                     <div class="company" id="tractable">
                         <h3>
