--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
                         </div>
                         <h3><b>Jocelyn Goldfein</b> – Managing Director</h3>
                         <p>Jocelyn Goldfein is a widely recognized industry expert on product strategy, infrastructure and organizational scale. Her career as an engineering leader spans from early stage startups to high-growth years at Facebook and VMware.</p>
-                        <p>During Jocelyn’s tenure at Facebook, she helped convert News Feed to Machine Learning and spearheaded the transition to a ‘mobile first” product organization. As an early engineer at VMware, she built core virtualization technology and ultimately established and ran VMware’s Desktop Business Unit, a $150M line of business. Jocelyn also held engineering and leadership roles at startups Datify, MessageOne and Trilogy/pcOrder.</p>
+                        <p>During Jocelyn’s tenure at Facebook, she helped convert News Feed to Machine Learning and spearheaded the transition to a ‘mobile first' product organization. As an early engineer at VMware, she built core virtualization technology and ultimately established and ran VMware’s Desktop Business Unit, a $150M line of business. Jocelyn also held engineering and leadership roles at startups Datify, MessageOne and Trilogy/pcOrder.</p>
                         <p>As an angel investor, she’s backed over 20 startups with an emphasis on infrastructure and AI. She serves on several boards, including Harvey Mudd College, and is a visiting lecturer at Stanford University, where she received her BS in Computer Science.</p>
                     </li>
                 </ul>
