--- a/index.html
+++ b/index.html
@@ -411,8 +411,8 @@
                 <span class="logo">Zetta</span>
                 <p class="contact-details">
                     info@zettavp.com  <br/>
-                    717 Market Street, Suite 650 <br/>
-                    San Francisco, CA 94103
+                    140 Geary Street, Suite 1000 <br/>
+                    San Francisco, CA
                 </p>
                 <p id="copyright">Zetta Venture Partners &ndash; Copyright 2015</p>
             </div>
