--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
                     </div>
                 </div>
                 <div class="company-pair">
-                    <div class="company" id="focal" class="last">
+                    <div class="company" id="focal">
                         <h3>
                             <a href="http://www.focal.systems/" target="_blank">
                                 <img src="img/company15.png" alt="Focal Systems">
@@ -330,6 +330,22 @@
                             <dd>Ash Fontana</dd>
                         </dl>
                         <p>Lilt develops world-leading machine translation technology that helps businesses optimize language translation speed, quality and cost to reach new customers.</p>
+                    </div>
+                </div>
+                <div class="company-pair">
+                    <div class="company" id="falkonry" class="last">
+                        <h3>
+                            <a href="http://falkonry.com/" target="_blank">
+                                <img src="img/company17.png" alt="Falkonry">
+                            </a>
+                        </h3>
+                        <dl>
+                            <dt>Round:</dt>
+                            <dd>Seed</dd>
+                            <dt>Board seat:</dt>
+                            <dd>Mark Gorenberg</dd>
+                        </dl>
+                        <p>Falkonry automates industrial operational gains by combining advanced pattern recognition techniques on industrial data with the knowledge of domain experts, and generates real-time alerts towards improving uptime, yield, quality, and efficiency.</p>
                     </div>
                 </div>
             </div>
